# signal-processing-simulation

./: .gitignore  CLAUDE.md  GUIDE.md  README.md  bpsk.py  config.py  gui.py  main.py  nonlinear_amplifier.py  plots.py  pyproject.toml  receiver.py  simulation.py  simulation.toml  simulation_simpler.toml  sweep.py
.claude/: settings.json
.claude/memory/: MEMORY.md  feedback.md  project_state.md  technical_notes.md  user_profile.md
data/theory/: ber_awgn_16APSK.npz  ber_awgn_32APSK.npz
docs/: GUIDE.md  batch_runs.md  channel_impairment.md  coding_design.md  filter_analysis.md  memory_scaling.md  msk_modulation.md  rational_resampling.md  simulation_overview.md  sweep_parallelism.md  synchronization.md  toolchain.md
memory/: MEMORY.md  context.md  feedback.md  project_state.md  technical_notes.md  user_profile.md
misc/: gen_icon.py
sim/: __init__.py  baseband.py  bpsk.py  config.py  filters.py  modulation.py  nonlinear_amplifier.py  phase_noise.py  plots.py  receiver.py  simulation.py  stats.py  sweep.py  targeter.py  theory.py
sim/coding/: __init__.py  concatenated.py  convolutional.py  ldpc.py  turbo.py
tests/: __init__.py  test_awgn_performance.py  test_coding.py  test_coding_performance.py  test_filters.py  test_main.py  test_modulations.py  test_nonlinear_amplifier.py  test_phase_noise.py  test_plots.py  test_simulation.py  test_stats.py  test_sweep.py  test_targeter.py  test_theory.py
tkconfig/: __init__.py  render.py  schema.py  serde.py  toml_writer.py  widgets.py
tools/: benchmark_coding.py  generate_theory_curves.py
