[project]
name = "signal-processing-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "matplotlib>=3.10",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E701",   # multiple statements on one line (colon)  — intentional in gui.py layout
    "E702",   # multiple statements on one line (semicolon) — intentional in gui.py layout
]
