[project]
name = "signal-processing-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "matplotlib>=3.10",
    "pillow>=11.0",
    "scipy>=1.15",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E701",   # multiple statements on one line (colon)  — intentional in gui.py layout
    "E702",   # multiple statements on one line (semicolon) — intentional in gui.py layout
]

[tool.pylint.format]
max-line-length = 110

[tool.pylint."messages control"]
disable = [
    "C0103",  # invalid-name — short names like L are intentional
    "C0115",  # missing-class-docstring — project doesn't use docstrings
    "C0116",  # missing-function-docstring — project doesn't use docstrings
    "C0321",  # multiple-statements — compact semicolon style is intentional
    "W0201",  # attribute-defined-outside-init — tkinter apps build UI in helper methods
]
