[project]
name = "signal-processing-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "matplotlib>=3.10",
    "pillow>=11.0",
    "scipy>=1.15",
    "numba>=0.65",
    "galois>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "D"]
ignore = [
    "E701",   # multiple statements on one line (colon)  — intentional in gui.py layout
    "E702",   # multiple statements on one line (semicolon) — intentional in gui.py layout
    # Style-rule conflicts — pick the modern PEP 257 variants:
    "D203",   # incorrect-blank-line-before-class (we use D211: no blank line)
    "D213",   # multi-line-summary-second-line (we use D212: summary on first line)
    # Opinionated rule we don't want enforced:
    "D401",   # non-imperative-mood — rejects natural docstrings like "Returns ..."
]

[tool.pylint.format]
max-line-length = 110

[tool.pylint."messages control"]
disable = [
    "C0103",  # invalid-name — short names like L are intentional
    "C0321",  # multiple-statements — compact semicolon style is intentional
    "W0201",  # attribute-defined-outside-init — tkinter apps build UI in helper methods
]
